Fixed tabs spacing

--- a/src/pages/list/list.scss
+++ b/src/pages/list/list.scss
@@ -1,3 +1,6 @@
 page-list {
-
+    .content-md {
+        background-color: #f4f4f4;
+        background: linear-gradient(to bottom, #e1e1e1 0%, #f4f4f4 100%);
+    }
 }
